<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ai.labs</groupId>
    <artifactId>eddi</artifactId>
    <packaging>pom</packaging>
    <version>4.7</version>

    <modules>
        <module>expressions</module>
        <module>persistencestore-definition</module>
        <module>sharedutilities</module>
        <module>user-definition</module>
        <module>runtime-definition</module>
        <module>permissions-definition</module>
        <module>configurationrepository-definition</module>
        <module>conversationmemory-definition</module>
        <module>automatedtesting-definition</module>
        <module>corerest-definition</module>
        <module>staticresourceprovider-definition</module>
        <module>user-impl</module>
        <module>permissions-impl</module>
        <module>persistencestore-impl</module>
        <module>conversationmemory-impl</module>
        <module>automatedtesting-impl</module>
        <module>coreutilities</module>
        <module>configurationrepository-impl</module>
        <module>runtime-impl</module>
        <module>staticresourceprovider-impl</module>
        <module>webserver</module>
        <module>coreserver</module>
        <module>semanticparser-definition</module>
        <module>semanticparser-impl</module>
        <module>conversationlifecycle-definition</module>
        <module>conversationlifecycle-impl</module>
        <module>apiserver</module>
        <module>caching-definition</module>
        <module>caching-impl-infinispan</module>
        <module>conversationcallback-definition</module>
        <module>conversationcallback-impl</module>
        <module>httpclient-definition</module>
        <module>httpclient-impl-jetty</module>
        <module>facebookmessenger-definition</module>
        <module>facebookmessenger-impl</module>
        <module>outputgeneration-definition</module>
        <module>outputgeneration-impl</module>
        <module>behavior-definition</module>
        <module>behavior-impl</module>
        <module>templateengine-definition</module>
        <module>templateengine-impl-thymeleaf</module>
        <module>propertydisposer-definition</module>
        <module>propertydisposer-impl</module>
        <module>backupservice-defintion</module>
        <module>backupservice-impl</module>
        <module>xmpp-definition</module>
        <module>xmpp-impl</module>
        <module>httpCallsTask-definition</module>
        <module>httpCallsTask-impl</module>
        <module>normalizer-definition</module>
        <module>normalizer-impl</module>
        <module>basemodels</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>12</source>
                    <target>12</target>
                    <release>12</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.26</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-nosql</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.10.2</version>
        </dependency>

        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>4.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-multibindings</artifactId>
            <version>4.2.2</version>
        </dependency>

        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jaxrs</artifactId>
            <version>3.7.0.Final</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-simple</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jboss-annotations-api_1.1_spec</artifactId>
                    <groupId>org.jboss.spec.javax.annotation</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jcip-annotations</artifactId>
                    <groupId>net.jcip</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-guice</artifactId>
            <version>3.7.0.Final</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jackson2-provider</artifactId>
            <version>3.7.0.Final</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- swagger START -->
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
            <version>1.5.22</version>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>1.5.22</version>
        </dependency>
        <!-- swagger END -->

        <!-- boiler plate code generation -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>compile</scope>
            <version>1.18.8</version>
        </dependency>

        <!-- testing START -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.27.0</version>
            <scope>test</scope>
        </dependency>
        <!-- testing END -->
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
